<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="370dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_scroll_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1_rutina_de_ejercicio" />

            <Button
                android:id="@+id/button_scroll_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2_horas_antes_de_dormir_sin_celular" />

            <Button
                android:id="@+id/button_scroll_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_3_comidas_completas" />

            <Button
                android:id="@+id/button_scroll_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_4_breaks" />

            <Button
                android:id="@+id/button_scroll_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_5_raciones_de_frutas_y_vegetales" />

            <Button
                android:id="@+id/button_scroll_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_6_minutos_de_meditaci_n" />

            <Button
                android:id="@+id/button_scroll_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_7_vasos_de_agua" />

            <Button
                android:id="@+id/button_scroll_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_8_horas_de_sue_o" />

            <Button
                android:id="@+id/button_scroll_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_9_mil_pasos" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/button29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lo_que_me_falta_hacer_hoy" />

        <Button
            android:id="@+id/button30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reporte_semanal_mensual" />

        <Button
            android:id="@+id/button31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/historial_de_h_bitos_completo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completado"
            android:textSize="24sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>